<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="false"
    android:orientation="vertical"
    tools:actionBarNavMode="standard"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/input_editText"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/enter_text"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="30sp" />

    <Button
        android:id="@+id/add_btn"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_btn" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/average_length"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/avg_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/zero_display"
            android:textColor="#ED000000"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/median_length"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/median_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/zero_display"
            android:textColor="#000000"
            android:textSize="24sp" />
    </LinearLayout>

    <Button
        android:id="@+id/view_btn"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/view_btn" />

    <NumberPicker
        android:id="@+id/num_numberPicker"
        android:layout_width="360dp"
        android:layout_height="163dp"
        android:layout_gravity="center"
        android:clickable="false"
        android:descendantFocusability="blocksDescendants" />

</LinearLayout>
